--- a/pics.html
+++ b/pics.html
@@ -17,24 +17,32 @@
       </div>
       <div id="main">
         <h1>Pics of Me</h1>
-        <img src="images/llama.jpg" alt="Me and a Llama" height="350" />
+        <img
+          src="images/llama.jpg"
+          alt="Me and a Llama"
+          height="350"
+          class="borderedImg"
+        />
         <div style="float: right">
           <img
             src="images/bday_sf.JPG"
             alt="Me on the Pier in San Francisco"
             height="350"
+            class="borderedImg"
           />
         </div>
         <img
           src="images/santa_cruz.HEIC"
           alt="Me holding a Pirouette cookie in my mouth in Santa Cruz"
           height="350"
+          class="borderedImg"
         />
         <div style="float: right">
           <img
             src="images/sb_friends.jpg"
             alt="Me, my girfriend to my left, and her roommate in front in Santa Barbara"
             height="350"
+            class="borderedImg"
           />
         </div>
       </div>
