--- a/songs.html
+++ b/songs.html
@@ -21,28 +21,51 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 11: Bound - The Ponderosa Twins Plus One
+          Week 12: Black Magic Woman - Santana
         </h2>
         <div class="row">
           <div class="column" id="leftColumn">
             <img
               id="imgSrc"
+              class="borderedImg"
               src="images/sotw.png"
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating: 8.1/10</h2>
-            <h2>Listen Here</h2>
-            <a
-              href="https://open.spotify.com/track/0AqE2nClzllWavHbkC2AeZ?si=f8df9b0ef9e34832"
-              target="_blank"
-              ><h3><center>Spotify</center></h3></a
-            >
-            <a
-              href="https://www.youtube.com/watch?v=d6mGHwHMB5s"
-              target="_blank"
-              ><h3><center>Youtube</center></h3></a
-            >
+            <h2 id="rating">Overall Rating: 7.9/10</h2>
+            <div class="column">
+              <center><h2>Listen Here</h2></center>
+              <div class="row">
+                <div class="column">
+                  <a
+                    href="https://open.spotify.com/track/4nmne9J3YCEdhvjTzwiAgu?si=6ddf3b89208b4b3b"
+                    target="_blank"
+                    ><center>
+                      <img
+                        id="spotifyIcon"
+                        class="listenIcon"
+                        src="images/spotify.png"
+                        alt="Spotify Link"
+                        height="50"
+                      /></center
+                  ></a>
+                </div>
+                <div class="column">
+                  <a
+                    href="https://www.youtube.com/watch?v=wyQUCYl-ocs"
+                    target="_blank"
+                    ><center>
+                      <img
+                        id="youtubeIcon"
+                        class="listenIcon"
+                        src="images/youtube.png"
+                        alt="Youtube Link"
+                        height="50"
+                      /></center
+                  ></a>
+                </div>
+              </div>
+            </div>
             <div id="newFeature" hidden>
               <h2>Rate this song!</h2>
               <div class="slidecontainer">
@@ -90,53 +113,71 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              The incredible vocalization of these high school boys astounds me.
-              The sweet and simple harmonics create such a gleeful energy that
-              carries throughout.
+              Now come on now. The bass speaks for itself here right? Santana
+              also happens to float over this song with his saucy voice, thanks
+              for that.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              This song was popularized by the two extremely popular samplings
-              "Bound 2" and "A BOY IS A GUN*" by Kanye West and Tyler, the
-              Creator respectively. It's an uncomplicated love song by this
-              group of highschool boys (two sets of twins "plus one"
-              interestingly). Indulge in this song if you need a bit of
-              simplicity in your life.
+              To start with a disclaimer, this song is a cover of a Fleetwood
+              Mac song, but a significantly better rendition in my opinion.
+              Santana throws a sweet Latin spin on this already suave song. This
+              track flows like caramel and emanates a slightly spooky sound. It
+              may be beacause of the skeleton hiding in the album cover, but
+              nevertheless, it is a fitting song selection for my mid-October
+              Song of the Week.
             </p>
           </div>
         </div>
         <div id="celebSotW">
           <div class="divider"><center>Celebrity Song of the Week</center></div>
           <h2 style="font-size: 30px" id="title">
-            Matt C: Elephant - Jason Isbell and the 400 Unit
+            Leanah Bell: Somebody Like You - Keith Urban
           </h2>
           <div class="row">
             <div class="column">
-              <h2 id="rating">Overall Rating: 10/10</h2>
+              <h2 id="rating">Overall Rating: 9.0/10</h2>
             </div>
             <div class="column">
-              <h2>Listen Here</h2>
-              <a
-                href="https://open.spotify.com/track/5hDrVjYuVbJ00KfzbrwtXa?si=a667decdcfa947ac"
-                target="_blank"
-                ><h3><center>Spotify</center></h3></a
-              >
-              <a
-                href="https://www.youtube.com/watch?v=pbgk4tTJEH8"
-                target="_blank"
-                ><h3><center>Youtube</center></h3></a
-              >
+              <center><h2>Listen Here</h2></center>
+              <div class="row">
+                <div class="column">
+                  <a
+                    href="https://open.spotify.com/track/0b9djfiuDIMw1zKH6gV74g?si=ab32e5e6245b4915"
+                    target="_blank"
+                    ><center>
+                      <img
+                        id="spotifyIcon"
+                        class="listenIcon"
+                        src="images/spotify.png"
+                        alt="Spotify Link"
+                        height="50"
+                      /></center
+                  ></a>
+                </div>
+                <div class="column">
+                  <a
+                    href="https://www.youtube.com/watch?v=143p6IP72Hk"
+                    target="_blank"
+                    ><center>
+                      <img
+                        id="youtubeIcon"
+                        class="listenIcon"
+                        src="images/youtube.png"
+                        alt="Youtube Link"
+                        height="50"
+                      /></center
+                  ></a>
+                </div>
+              </div>
             </div>
           </div>
           <h2>Overall Review</h2>
           <p id="celebOverall">
-            Jason Isbell is a story teller. His songs conjure emotion and vivid
-            reflections of what it is to be human. Elephant is one woman’s story
-            battling terminal cancer and Jason’s lyrical genius is on full
-            display. The song is sad, funny, sweet and even a little sexy. His
-            guitar playing perfectly matches the underlying melancholy of the
-            story and never fails to bring a lump to my throat and often more
-            than a few tears to my eyes.
+            I like this song because it makes me happy and it never gets old.
+            Although some people are sick of hearing the song I am not. @Jack
+            This is a cute song about wanting to love somebody. It reminds me of
+            the cars movie for some reason.
           </p>
         </div>
         <div class="divider"><center>Song of the Week Archive</center></div>
@@ -196,6 +237,11 @@
               <td>10</td>
               <td>Rollinem 7's - N.E.R.D</td>
               <td>7.4/10</td>
+            </tr>
+            <tr>
+              <td>11</td>
+              <td>Bound - The Ponderosa Twins Plus One</td>
+              <td>8.1/10</td>
             </tr>
           </table>
         </div>
