--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 12: Black Magic Woman - Santana
+          Week 13: Karma - Taylor Swift
         </h2>
         <div class="row">
           <div class="column" id="leftColumn">
@@ -32,13 +32,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating: 7.9/10</h2>
+            <h2 id="rating">Overall Rating: 7.2/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/4nmne9J3YCEdhvjTzwiAgu?si=6ddf3b89208b4b3b"
+                    href="https://open.spotify.com/track/5oqDgw5VGBln5dSIOPWyBq?si=2850e25a96a2452b"
                     target="_blank"
                     ><center>
                       <img
@@ -52,7 +52,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=wyQUCYl-ocs"
+                    href="https://www.youtube.com/watch?v=rg18Kf4en2o"
                     target="_blank"
                     ><center>
                       <img
@@ -113,23 +113,24 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              Now come on now. The bass speaks for itself here right? Santana
-              also happens to float over this song with his saucy voice, thanks
-              for that.
+              What to say here. . . The three lines on which she commits SO hard
+              to the bit of karma being a bounty hunter is so so amazing. The
+              chorus is so intriguing to me and I personally cannot get enough.
+              "Karma takes all my friends to the summit."
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              To start with a disclaimer, this song is a cover of a Fleetwood
-              Mac song, but a significantly better rendition in my opinion.
-              Santana throws a sweet Latin spin on this already suave song. This
-              track flows like caramel and emanates a slightly spooky sound. It
-              may be beacause of the skeleton hiding in the album cover, but
-              nevertheless, it is a fitting song selection for my mid-October
-              Song of the Week.
+              This week, there's a new Taylor Swift album. I was undoubtedly
+              obliged to put one of the tracks as my Song of the Week, so here
+              we are. Is Karma my favorite song off the album? Overall, probably
+              not. After listening to the album on repeat three times over on
+              release night, however, this little diddy has been trapped in my
+              mind. It would really be unfair to pick any other song. I hope you
+              enjoy it!
             </p>
           </div>
         </div>
-        <div id="celebSotW">
+        <div id="celebSotW" hidden>
           <div class="divider"><center>Celebrity Song of the Week</center></div>
           <h2 style="font-size: 30px" id="title">
             Leanah Bell: Somebody Like You - Keith Urban
@@ -242,6 +243,11 @@
               <td>11</td>
               <td>Bound - The Ponderosa Twins Plus One</td>
               <td>8.1/10</td>
+            </tr>
+            <tr>
+              <td>12</td>
+              <td>Black Magic Woman - Santana</td>
+              <td>7.9/10</td>
             </tr>
           </table>
         </div>
