--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 13: Karma - Taylor Swift
+          Week 14: Shirt - SZA
         </h2>
         <div class="row">
           <div class="column" id="leftColumn">
@@ -32,13 +32,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating: 7.2/10</h2>
+            <h2 id="rating">Overall Rating: 9.3/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/5oqDgw5VGBln5dSIOPWyBq?si=2850e25a96a2452b"
+                    href="https://open.spotify.com/track/34ZAzO78a5DAVNrYIGWcPm?si=4f4c516205d64112"
                     target="_blank"
                     ><center>
                       <img
@@ -52,7 +52,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=rg18Kf4en2o"
+                    href="https://www.youtube.com/watch?v=hdFDrjfW548"
                     target="_blank"
                     ><center>
                       <img
@@ -113,38 +113,38 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              What to say here. . . The three lines on which she commits SO hard
-              to the bit of karma being a bounty hunter is so so amazing. The
-              chorus is so intriguing to me and I personally cannot get enough.
-              "Karma takes all my friends to the summit."
+              I really enjoy the short bridge between the second and third
+              chorus but the truth of the matter is that SZA's voice never
+              fails. She consistently glides over any production with her sultry
+              and unpronounced vocals. I love it every time.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              This week, there's a new Taylor Swift album. I was undoubtedly
-              obliged to put one of the tracks as my Song of the Week, so here
-              we are. Is Karma my favorite song off the album? Overall, probably
-              not. After listening to the album on repeat three times over on
-              release night, however, this little diddy has been trapped in my
-              mind. It would really be unfair to pick any other song. I hope you
-              enjoy it!
+              FINALLY! This song was leaked so long ago and it was teased to be
+              dropping at least three different times, but it has arrived. It's
+              a fairly simplistic and short song but any new SZA is welcomed
+              here. If you like this song, listen to her album "Ctrl" (my
+              favorite album oat). The music video for this song, linked below,
+              is really enjoyable too if you need an additional visual
+              experience.
             </p>
           </div>
         </div>
-        <div id="celebSotW" hidden>
+        <div id="celebSotW">
           <div class="divider"><center>Celebrity Song of the Week</center></div>
           <h2 style="font-size: 30px" id="title">
-            Leanah Bell: Somebody Like You - Keith Urban
+            Zachary Chesnut: Mushaboom - Feist
           </h2>
           <div class="row">
             <div class="column">
-              <h2 id="rating">Overall Rating: 9.0/10</h2>
+              <h2 id="rating">Overall Rating: 8.4/10</h2>
             </div>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/0b9djfiuDIMw1zKH6gV74g?si=ab32e5e6245b4915"
+                    href="https://open.spotify.com/track/66olzBxCgKlpFRB1LKH5pO?si=080cc42d5a6e4841"
                     target="_blank"
                     ><center>
                       <img
@@ -158,7 +158,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=143p6IP72Hk"
+                    href="https://www.youtube.com/watch?v=cYF0qU5WSew"
                     target="_blank"
                     ><center>
                       <img
@@ -175,10 +175,15 @@
           </div>
           <h2>Overall Review</h2>
           <p id="celebOverall">
-            I like this song because it makes me happy and it never gets old.
-            Although some people are sick of hearing the song I am not. @Jack
-            This is a cute song about wanting to love somebody. It reminds me of
-            the cars movie for some reason.
+            I recently stumbled across Feist while watching older SNL
+            performances earlier last week. Her genre scattered album, “Let it
+            Die”, gives an assortment of summery sounds structured by a plot
+            line of heartbreak; which she beautifully delivers using her soft,
+            charismatic vocals. “Mushaboom” is a flawless example where her
+            folk/indie blend is on full display. While she chooses a more mature
+            approach for her lyrics, the innocent sounding claps and strings
+            create a balance for the song, which results in such a comforting
+            sound.
           </p>
         </div>
         <div class="divider"><center>Song of the Week Archive</center></div>
@@ -248,6 +253,11 @@
               <td>12</td>
               <td>Black Magic Woman - Santana</td>
               <td>7.9/10</td>
+            </tr>
+            <tr>
+              <td>13</td>
+              <td>Karma - Taylor Swift</td>
+              <td>7.2/10</td>
             </tr>
           </table>
         </div>
