--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 14: Shirt - SZA
+          Week 15: Endlessly - Omar Apollo
         </h2>
         <div class="row">
           <div class="column" id="leftColumn">
@@ -32,13 +32,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating: 9.3/10</h2>
+            <h2 id="rating">Overall Rating: 9.5/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/34ZAzO78a5DAVNrYIGWcPm?si=4f4c516205d64112"
+                    href="https://open.spotify.com/track/4VUXAoJESfRV3ceUYtzfpQ?si=6fccb1683e774c07"
                     target="_blank"
                     ><center>
                       <img
@@ -52,7 +52,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=hdFDrjfW548"
+                    href="https://www.youtube.com/watch?v=YQ6TW3-gVbw"
                     target="_blank"
                     ><center>
                       <img
@@ -113,38 +113,39 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              I really enjoy the short bridge between the second and third
-              chorus but the truth of the matter is that SZA's voice never
-              fails. She consistently glides over any production with her sultry
-              and unpronounced vocals. I love it every time.
+              I once again find myself having an extremely hard time choosing my
+              favorite part of this song. The vocals throughout the song are
+              very pleasing, but I do believe one set stands above the rest. The
+              pitched-up vocals in the chorus do something really nice for me
+              and although that's a rather bland pick for my favorite part of
+              this song, I will adhere to my brain's inclination.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              FINALLY! This song was leaked so long ago and it was teased to be
-              dropping at least three different times, but it has arrived. It's
-              a fairly simplistic and short song but any new SZA is welcomed
-              here. If you like this song, listen to her album "Ctrl" (my
-              favorite album oat). The music video for this song, linked below,
-              is really enjoyable too if you need an additional visual
-              experience.
+              This is my favorite song from Omar Apollo's most recent album
+              "Ivory (Marfil)". This week, I had the pleasure of seeing him
+              live, and this song sounded SO good coming right from his vocal
+              chords. I had to put it in the spotlight! If you want a semi-live
+              experience of this song, check out his NPR Tiny Desk on youtube, I
+              highly recommend.
             </p>
           </div>
         </div>
         <div id="celebSotW">
           <div class="divider"><center>Celebrity Song of the Week</center></div>
           <h2 style="font-size: 30px" id="title">
-            Zachary Chesnut: Mushaboom - Feist
+            Gaby Delorey: Layla - Derek & The Dominos
           </h2>
           <div class="row">
             <div class="column">
-              <h2 id="rating">Overall Rating: 8.4/10</h2>
+              <h2 id="rating">Overall Rating: 8.9/10</h2>
             </div>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/66olzBxCgKlpFRB1LKH5pO?si=080cc42d5a6e4841"
+                    href="https://open.spotify.com/track/2kkvB3RNRzwjFdGhaUA0tz?si=3d215043d5bb4419"
                     target="_blank"
                     ><center>
                       <img
@@ -158,7 +159,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=cYF0qU5WSew"
+                    href="https://www.youtube.com/watch?v=TngViNw2pOo"
                     target="_blank"
                     ><center>
                       <img
@@ -175,15 +176,15 @@
           </div>
           <h2>Overall Review</h2>
           <p id="celebOverall">
-            I recently stumbled across Feist while watching older SNL
-            performances earlier last week. Her genre scattered album, “Let it
-            Die”, gives an assortment of summery sounds structured by a plot
-            line of heartbreak; which she beautifully delivers using her soft,
-            charismatic vocals. “Mushaboom” is a flawless example where her
-            folk/indie blend is on full display. While she chooses a more mature
-            approach for her lyrics, the innocent sounding claps and strings
-            create a balance for the song, which results in such a comforting
-            sound.
+            Recently I was sitting at a stoplight and had just shuffled a random
+            playlist. I was blasting this song with my windows down when a nice
+            older man walked by and asked what song this was. It was a cute
+            little moment and we both discovered something new, which I think is
+            rad. Layla (and other assorted love songs) is an amazing album. This
+            song, backed by wonderful musicianship, has such a nice combination
+            of earthy spirituality and joy. The impact of this song can be so
+            diverse and I’m sure we can all feel something different when
+            listening to it :).
           </p>
         </div>
         <div class="divider"><center>Song of the Week Archive</center></div>
@@ -258,6 +259,11 @@
               <td>13</td>
               <td>Karma - Taylor Swift</td>
               <td>7.2/10</td>
+            </tr>
+            <tr>
+              <td>14</td>
+              <td>Shirt - SZA</td>
+              <td>9.3/10</td>
             </tr>
           </table>
         </div>
