--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 15: Endlessly - Omar Apollo
+          Week 16: No L's - Smino
         </h2>
         <div class="row">
           <div class="column" id="leftColumn">
@@ -32,13 +32,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating: 9.5/10</h2>
+            <h2 id="rating">Overall Rating: 8.1/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/4VUXAoJESfRV3ceUYtzfpQ?si=6fccb1683e774c07"
+                    href="https://open.spotify.com/track/12CNybio0Bxean3F3uYugU?si=518d72ad5bf94a96"
                     target="_blank"
                     ><center>
                       <img
@@ -52,7 +52,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=YQ6TW3-gVbw"
+                    href="https://www.youtube.com/watch?v=m_-rF7WMBJw"
                     target="_blank"
                     ><center>
                       <img
@@ -113,39 +113,39 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              I once again find myself having an extremely hard time choosing my
-              favorite part of this song. The vocals throughout the song are
-              very pleasing, but I do believe one set stands above the rest. The
-              pitched-up vocals in the chorus do something really nice for me
-              and although that's a rather bland pick for my favorite part of
-              this song, I will adhere to my brain's inclination.
+              Smino mentions Frank Ocean near the end of this track and
+              subsequently, a snippet of Ocean's "Nikes" plays in the
+              background. I appreciate the reference.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              This is my favorite song from Omar Apollo's most recent album
-              "Ivory (Marfil)". This week, I had the pleasure of seeing him
-              live, and this song sounded SO good coming right from his vocal
-              chords. I had to put it in the spotlight! If you want a semi-live
-              experience of this song, check out his NPR Tiny Desk on youtube, I
-              highly recommend.
+              This track from Smino's very recently released album caught my
+              attention immediately. Right away I recognized a familiar sampling
+              of Monica's "Knock Knock", consistent with the background melody
+              in "Potato Salad" by Tyler, The Creator. "No L's" feels like a
+              more mellow and fluid parallel to the aformentioned track. This is
+              one of my limited exposures to Smino, but he brings such an
+              interestingly calm aura to this song and the rest of his album.
+              Give this song a listen and make the best of your week. Until next
+              time.
             </p>
           </div>
         </div>
         <div id="celebSotW">
           <div class="divider"><center>Celebrity Song of the Week</center></div>
           <h2 style="font-size: 30px" id="title">
-            Gaby Delorey: Layla - Derek & The Dominos
+            Lauren Rappa: Timefighter - Lucy Dacus
           </h2>
           <div class="row">
             <div class="column">
-              <h2 id="rating">Overall Rating: 8.9/10</h2>
+              <h2 id="rating">Overall Rating: 9.9/10</h2>
             </div>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/2kkvB3RNRzwjFdGhaUA0tz?si=3d215043d5bb4419"
+                    href="https://open.spotify.com/track/7c9srBkFoHv13JZaQlachO?si=4e856f9129044228"
                     target="_blank"
                     ><center>
                       <img
@@ -159,7 +159,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=TngViNw2pOo"
+                    href="https://www.youtube.com/watch?v=FdCVwE8tpLs"
                     target="_blank"
                     ><center>
                       <img
@@ -176,15 +176,27 @@
           </div>
           <h2>Overall Review</h2>
           <p id="celebOverall">
-            Recently I was sitting at a stoplight and had just shuffled a random
-            playlist. I was blasting this song with my windows down when a nice
-            older man walked by and asked what song this was. It was a cute
-            little moment and we both discovered something new, which I think is
-            rad. Layla (and other assorted love songs) is an amazing album. This
-            song, backed by wonderful musicianship, has such a nice combination
-            of earthy spirituality and joy. The impact of this song can be so
-            diverse and I’m sure we can all feel something different when
-            listening to it :).
+            I can so vividly remember the first time I heard this song and how
+            immediately taken I was with it. I love Lucy Dacus’ music so much
+            because I find her to be a very comforting presence. I believe that
+            she is one of the greatest lyricists of our generation, and my
+            personal favorite. Her voice is so soothing and beautiful. One of my
+            favorite things about her music is how well she is able to perfectly
+            curate specific vibes and feelings for each of her songs and albums
+            as a whole cohesive piece. Her second album, Home Video, has a very
+            nostalgic feeling. This album, Historians, has a very dark vibe that
+            I really enjoy listening to. I think this is the best on the album
+            because of how much of an out of body experience listening is for
+            me. It discusses time passing and the feeling of trying to fight
+            against the fleeting moments we have, and the inability of humans to
+            stop the passage of time. The way that the song's pace increases
+            tension and builds the feeling of anxiety that comes with the fear
+            of aging and missing moments is so visceral, and is such a good
+            representation of our lack of control of existence and its
+            impermanence. That paired with the building intensity of the guitar
+            and vocals is incredible. I find this song perfect to be honest but
+            I was afraid to give it a 10/10 so I took it back to a 9.9 just to
+            leave room.
           </p>
         </div>
         <div class="divider"><center>Song of the Week Archive</center></div>
@@ -264,6 +276,11 @@
               <td>14</td>
               <td>Shirt - SZA</td>
               <td>9.3/10</td>
+            </tr>
+            <tr>
+              <td>15</td>
+              <td>Endlessly - Omar Apollo</td>
+              <td>9.5/10</td>
             </tr>
           </table>
         </div>
