--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 16: No L's - Smino
+          Week 17: Could You Be Loved - Bob Marley & The Wailers
         </h2>
         <div class="row">
           <div class="column" id="leftColumn">
@@ -32,13 +32,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating: 8.1/10</h2>
+            <h2 id="rating">Overall Rating: 8.8/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/12CNybio0Bxean3F3uYugU?si=518d72ad5bf94a96"
+                    href="https://open.spotify.com/track/5O4erNlJ74PIF6kGol1ZrC?si=e152c541efe1409c"
                     target="_blank"
                     ><center>
                       <img
@@ -52,7 +52,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=m_-rF7WMBJw"
+                    href="https://www.youtube.com/watch?v=g3t6YDnGXAc"
                     target="_blank"
                     ><center>
                       <img
@@ -113,25 +113,23 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              Smino mentions Frank Ocean near the end of this track and
-              subsequently, a snippet of Ocean's "Nikes" plays in the
-              background. I appreciate the reference.
+              My favorite part of this song isn't so much part of the song at
+              all. Bob Marley's energy brought to every song makes him the
+              undisputed master of Reggae. For my purposes, the tropicality of
+              this song alone makes it my Song of the Week this week.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              This track from Smino's very recently released album caught my
-              attention immediately. Right away I recognized a familiar sampling
-              of Monica's "Knock Knock", consistent with the background melody
-              in "Potato Salad" by Tyler, The Creator. "No L's" feels like a
-              more mellow and fluid parallel to the aformentioned track. This is
-              one of my limited exposures to Smino, but he brings such an
-              interestingly calm aura to this song and the rest of his album.
-              Give this song a listen and make the best of your week. Until next
-              time.
+              This track from Bob Marley's 1980 album "Uprising" is one of his
+              most well known and admired songs for good reason. The infectious
+              yet rather simple conjuction of snappy percussions are easy to the
+              ear, I could listen to this song on repeat for a whole beach day.
+              Aloha from the big island! Make the best of this week and give
+              this song a listen.
             </p>
           </div>
         </div>
-        <div id="celebSotW">
+        <div id="celebSotW" hidden>
           <div class="divider"><center>Celebrity Song of the Week</center></div>
           <h2 style="font-size: 30px" id="title">
             Lauren Rappa: Timefighter - Lucy Dacus
@@ -281,6 +279,11 @@
               <td>15</td>
               <td>Endlessly - Omar Apollo</td>
               <td>9.5/10</td>
+            </tr>
+            <tr>
+              <td>16</td>
+              <td>No L's - Smino</td>
+              <td>8.1/10</td>
             </tr>
           </table>
         </div>
